# metaxis

./: CHANGELOG.md  README.md  config.yaml  metaxis.cabal  pgsql_config.yaml  stack.yaml
migrations/: 002_create_items.sql  005_create_items_with_description.sql
pg_migrations/: 002_create_items.down.sql  003_add_description_to_items.down.sql  004_add_items.down.sql  005_create_items_with_description.down.sql
sqlite_migrations/: 001_create_test.sql  002_create_items.sql  003_add_description_to_items.sql  004_add_items.down.sql  004_add_items.sql
src/: Main.hs
src/Metaxis/: Class.hs  Config.hs  Postgres.hs  Runner.hs  Sqlite.hs
test/: ConfigSpec.hs  Spec.hs
